# mycelium-intelligence

./: .gitignore  CMakeLists.txt  README.md  README_NEW.md  README_OLD.md  hyperparameters.txt  node_nn_model.nn  sim_output.json  training_data.csv
heuristics/: hyperparameter_sweep.py  train_data_gen.py  train_no_vibes.py  training_data.csv  training_data_anastomosis.csv  training_data_autophagy.csv  training_data_conservative.csv  training_data_v10_shear_stress.csv  training_data_v11_safe_junctions.csv  training_data_v12_murrays_law.csv  training_data_zero_vibe.csv
node-NN/src/: main.cpp  nn.cpp  nn.h
results/: analyze_connected_metrics.py  plot_node_nn_poster_figure.py  visualize_persistent_decay.py
results/connected_metrics/: connected_disappear_events.csv  metrics_overview.json  persistent_decay_series.csv  persistent_seeds_metrics.csv  seed_connectivity_summary.csv
scripts/: run_eval_and_analyze.bat  run_eval_and_analyze.ps1  train_only.bat  train_only.sh
src/: eval_seed_trials.cpp  main.cpp  train_nn.cpp
src/nn/: CMakeLists.txt  nn.cpp  nn.h
src/nn/node_nn/: nn.cpp  nn.h
src/nn/node_nn/utils/: io.cpp  io.h
src/sim/: CMakeLists.txt  config.cpp  config.h  export.cpp  export.h  graph.cpp  graph.h  maze.cpp  maze.h
